<resources>
    <string name="love">&#xf256;</string>
    <string name="mail">Email</string>
    <string name="pass">Password</string>
    <string name="asInventor">As an Inventor</string>
    <string name="asInvestor">As an Investor</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register with us.</string>
    <string name="first_name">Your Name</string>
    <string name="second_name">Second Name</string>
    <string name="forgot_paasword_"><u>Forgot Password?</u></string>
    <string name="password">Enter your password</string>
    <string name="log_in">Sign In</string>
    <string name="app_name">Blood</string>
    <string name="icon">Icon</string>
    <string name="email">Enter your email</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="company">Konza Construction</string>
    <string name="action_settings">Settings</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="as_guest"><![CDATA[The general public>]]></string>
    <string name="home">Home</string>
    <string name="showcase">Showcase</string>
    <string name="crowdfund">Crowd Fund</string>
    <string name="projects">Projects</string>
    <string name="myCompany">My Company</string>
    <string name="logout">Log Out</string>
    <string name="business_idea">Business Idea</string>
    <string name="contacts">Contacts</string>

    <string name="error_email_required">Verification code is required</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_numbers_only">Wrong verification code</string>
    <string name="spinner_title">Coumty:</string>
    <string name="spinner_title1">Gender:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_donor">DonorActivity</string>
    <string name="badge">&#xf005;</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="title_activity_blood_banks">BloodBanks</string>
    <string name="title_activity_prof">ProfActivity</string>
</resources>
