<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <android.support.v4.view.ViewPager
        android:id="@+id/splash_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

       <!-- <com.konza.app.CircleIndicator
            android:id="@+id/splash_indicator"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_above="@+id/layout_btns"
            android:paddingBottom="10dp"
            custom:ci_drawable_unselected="@drawable/unselected" />-->

        <LinearLayout
            android:id="@+id/linear_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/button1"
                android:text="@string/signin"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button2"
                android:text="@string/signup" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_asGuest"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:text="@string/as_guest"
            android:textColor="@android:color/white" />
    </LinearLayout>


</FrameLayout>