<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/tools"
        android:id="@+id/signup_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eeeeee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_gravity="top"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="Update Profile"
                android:textAppearance="@style/green_title" />

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight=".95"
                card_view:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">



                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_acdess_title1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Entry form"
                            android:textColor="@android:color/black"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/tv_access_content1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:text="Enter details of the product you wish to sell. " />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/et_full_names"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight=".95"
                    android:background="@drawable/group_top"
                    android:hint="Full names"
                    android:inputType="text"
                    android:paddingBottom="8dp"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="8dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:weightSum="1">

                <TextView
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="Select your Gender  here:"
                    android:layout_marginBottom="5dp"
                    />
                <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/spinner_title1"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:gravity="center_horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/et_blood_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight=".95"
                    android:background="@drawable/group_row"
                    android:hint="Blood Group"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="8dp"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight=".95"
                    android:background="@drawable/group_row"
                    android:hint="Phone Number"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="8dp"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="8dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:weightSum="1">

                <TextView
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="Select your County  here:"
                    android:layout_marginBottom="5dp"
                    />
                <Spinner
                    android:id="@+id/county_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/spinner_title"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/et_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight=".95"
                    android:background="@drawable/group_row"
                    android:hint="City"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="8dp"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/et_residential_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight=".95"
                    android:background="@drawable/group_bottom"
                    android:hint="Residential Address"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="4"
                    android:paddingBottom="8dp"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="8dp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:weightSum="1">

                <Button
                    android:id="@+id/bt_submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="5dp"
                    android:layout_weight=".45"
                    android:background="@drawable/button1"
                    android:gravity="center"
                    android:text="Submit"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/bt_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_weight=".45"
                    android:background="@drawable/button2"
                    android:text="@string/cancel"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>
